tests/ui/parser/issues/issue-20616-7.stderr
error: expected one of `>`, a const expression, lifetime, or type, found `,`
  --> $DIR/issue-20616-7.rs:28:22
   |
LL | type Type_7 = Box<(),,>;
   |                      ^ expected one of `>`, a const expression, lifetime, or type
   |
help: you might have meant to end the type parameters here
   |
LL | type Type_7 = Box<()>,,>;
   |                     +

error: aborting due to 1 previous error

